--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -28,7 +28,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 
+    <meta name="keywords" content="深圳大学, 深大, 深圳大学安省, 深大安省, 深圳大学安省校友会, 深大安省校友会, 深圳大学多伦多, 深大多伦多, 深圳大学多伦多校友会, 深大多伦多校友会"/>
+	<meta name="description" content="深圳大学安省校友会成立了"/>
+	
 </head>
 <body>
 
