--- a/templates/views/create-event.hbs
+++ b/templates/views/create-event.hbs
@@ -236,7 +236,8 @@
 
     new Sortable(gallery, {
         animation: 400,
-        ghostClass: 'ghost'
+        ghostClass: 'ghost',
+        swapThreshold: 0.5
     });
 
 </script>
