--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,7 +8,14 @@
 
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
-    
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "http://szualumni.org",
+        "logo": "http://szualumni.org/img/sz-logo-trans.png"
+        }
+    </script>
     
     {{!-- bootstrap css --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
