--- a/templates/views/downloads.hbs
+++ b/templates/views/downloads.hbs
@@ -15,7 +15,7 @@
 <div class="container-fluid" id="downloads">
     
     <div class="about-us w-75 mx-auto py-3">
-        <h3 class="mb-3" style="color:#bc1e58"><b>历史资料：</b></h3>
+        <h3 class="mb-3 theme-color"><b>历史资料：</b></h3>
         {{# files}}
         <div class="my-3"><a href="/files/downloads{{file_path}}" target="_blank"> 《{{file_name}}》 下载 >> </a></div>
         {{/ files}}
