--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,7 +4,7 @@
 
 <div class="container-fluid" id="page-not-fount">
     <div class="w-75 mx-auto text-center my-5">
-        <h1 style="color:#bc1e58"><b>Oop!<br>Sorry, page not found.</b></h1>
+        <h1 class="theme-color"><b>Oop!<br>Sorry, page not found.</b></h1>
         <a class="btn btn-outline-primary btn-lg mt-5" href="/" role="button">Back to Home</a>
     </div>
 </div>
