--- a/templates/views/create-event.hbs
+++ b/templates/views/create-event.hbs
@@ -13,8 +13,8 @@
 </div>
     
 {{!-- 新建活动 --}}
-<div class="container-fluid" id="create-event">
-    <div class="w-75 mx-auto py-3">
+<div class="container-sm" id="create-event">
+    <div class="w-100 mx-auto py-3">
         <form id="create-event-form">
             <div class="form-group">
                 <label for="inputTitle">活动标题</label>
