--- a/templates/views/sign-in.hbs
+++ b/templates/views/sign-in.hbs
@@ -61,7 +61,7 @@
         e.preventDefault();
 
         const form_data = {
-            account: $('#inputAccount').val(),
+            account: $('#inputAccount').val().trim(),
             password: $('#inputPassword').val()
         }
 
