--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -2,8 +2,8 @@
 {{>header}}
 
 
-<div class="container-fluid" id="page-not-fount">
-    <div class="w-75 mx-auto text-center my-5">
+<div class="container-sm" id="page-not-fount">
+    <div class="w-100 mx-auto text-center my-5">
         <h1 class="theme-color"><b>Oop!<br>Sorry, page not found.</b></h1>
         <a class="btn btn-outline-primary btn-lg mt-5" href="/" role="button">Back to Home</a>
     </div>
