--- a/templates/views/council.hbs
+++ b/templates/views/council.hbs
@@ -12,30 +12,36 @@
 </div>
 
 <div class="container-fluid" id="council">
+    <div class="row justify-content-center">
+        <div class="col col-md-9 py-3 table-responsive">
+            <table class="table table-hover table-bordered text-center">
+                <caption>深大安省校友会理事会 Update: {{update}}</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">姓名</th>
+                        <th scope="col">职务</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{# council}}
+                    <tr>
+                        <td>{{name}}</td>
+                        <td>{{title}}</td>
+                    </tr>
+                    {{/ council}}
+                </tbody>
+            </table>
+        </div>
 
-    <div class="w-75 mx-auto table-responsive">
-        <table class="table table-hover table-bordered text-center">
-            <caption>深大安省校友会理事会 Update: {{update}}</caption>
-            <thead>
-                <tr>
-                    <th scope="col">姓名</th>
-                    <th scope="col">职务</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{# council}}
-                <tr>
-                    <td>{{name}}</td>
-                    <td>{{title}}</td>
-                </tr>
-                {{/ council}}
-            </tbody>
-        </table>
+        <div class="w-100"></div>
+
+        <div class="col col-md-9 mb-5">
+            <img src="/img/council.png" class="w-100" alt="深大安省校友会理事会">
+        </div>
+
     </div>
 
-    <div class="w-75 mx-auto my-5">
-        <img src="/img/council.png" class="w-100" alt="深大安省校友会理事会">
-    </div>
+    
 
 </div>
     
