--- a/templates/views/events.hbs
+++ b/templates/views/events.hbs
@@ -19,7 +19,7 @@
         {{/if}}
         <div class="row row-cols-1 row-cols-md-2">
             {{!-- 往期活动 --}}
-            <div class="col d-flex flex-column align-items-center px-5">
+            <div class="col d-flex flex-column align-items-center px-lg-5">
                 <h3 class="text-center my-3 theme-color font-weight-bold">往期活动</h3>
                 <div class="card w-100 mb-3 border-primary">
                     <ul class="list-group list-group-flush events-list">
@@ -53,7 +53,7 @@
             </div>
 
             {{!-- 未来活动 --}}
-            <div class="col d-flex flex-column align-items-center px-5">
+            <div class="col d-flex flex-column align-items-center px-lg-5">
                 <h3 class="text-center my-3 theme-color font-weight-bold">未来活动</h3>
                 <div class="card w-100 mb-3 border-success">
                     <ul class="list-group list-group-flush events-list">
