set footer copyright

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -29,8 +29,7 @@
             </div>
         </nav>
 
-
-        <div class="row w-50 mx-auto social-media">
+        <div class="row justify-content-center w-50 mx-auto my-1 social-media">
             <div class="col-3 text-center">
                 <a href="https://www.facebook.com/groups/1073288389542329/" target="_blank" title="Facebook">
                     <i class="fab fa-facebook-square text-dark"></i>
@@ -92,7 +91,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <img src="/img/qr-code.png" class="w-100">
+                        <p>请联系校友会，申请加入“深大安省校友会”微信群</p>
                     </div>
                 </div>
             </div>
@@ -108,14 +107,14 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Please email to <a href="mailto:gordonyuzr@gmail.com">szuaao@gmail.com</a></p>
+                        <p>Please email to <a href="mailto:admin@szualumni.org">admin@szualumni.org</a></p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="copyright text-center">
-            <span>Copyright &copy; 2019 深大安省校友会</span><br>
+        <div class="copyright text-center my-3">
+            <span>Copyright &copy; 2019 深大安省校友会. All Rights Reserved</span><br>
             <span>Designed by Zhuoran Yu</span>
         </div>
 
