--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,8 +152,7 @@ a:hover {
 }
 
 #footer .social-media i {
-    margin: 1vw 0;
-    font-size: 1.6vw;
+    font-size: 1.1rem;
 }
 
 #footer .copyright span {
