set padding to create and edit event page

--- a/templates/views/create-event.hbs
+++ b/templates/views/create-event.hbs
@@ -46,7 +46,7 @@
                 <input type="file" name="photos" class="form-control-file" id="uploadPhoto" accept=".jpg,.jpeg,.png" hidden multiple>
             </div>
 
-            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6" id="gallery">
+            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6 pr-5 pr-md-0" id="gallery">
                 {{!-- <div class="col mb-2">
                     <a href="#" class="close-icon"><i class="fas fa-times-circle fa-sm close"></i></a>
                     <img id="img-0" src="/img/events/1579368218072_badminton-team.png" class="w-100">
