update title for each page

--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -85,6 +85,8 @@
 
 <script>
 
+    $('title').html('深圳大学安省校友会-校友企业');
+
     $('.carousel-inner').children('.carousel-item:nth-child(1)').addClass( "active" );
 
     $('#category .card').on('click', (e) => {
