update official account

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -91,7 +91,10 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>请联系校友会，申请加入“深大安省校友会”微信群</p>
+                        <img src="/img/wechat-official-account.png" class="w-100">
+                        <p>扫描二维码关注深大安省校友会公众号——枫华荔园</p>
+                        <hr>
+                        <p>申请加入深大安省校友会微信群,请联系校友会</p>
                     </div>
                 </div>
             </div>
