--- a/templates/views/council.hbs
+++ b/templates/views/council.hbs
@@ -14,8 +14,9 @@
 <div class="container-fluid" id="council">
     <div class="row justify-content-center">
         <div class="col col-md-9 py-3 table-responsive">
+            <h1 class="text-center">深大安省校友会理事会</h1>
             <table class="table table-hover table-bordered text-center">
-                <caption>深大安省校友会理事会 Update: {{update}}</caption>
+                <caption>Update: {{update}}</caption>
                 <thead>
                     <tr>
                         <th scope="col">姓名</th>
