--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="/css/styles.css">
 
     {{!-- font awesome --}}
-    <script src="https://kit.fontawesome.com/4f89a3253f.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    
     {{!-- bootstrap js --}}
     {{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
