--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -45,8 +45,8 @@
 
 {{!-- features --}}
 <div class="container-fluid" id="features">
-    <div class="row w-50 mx-auto mb-3">
-        <div class="col-md-6 mt-5">
+    <div class="row row-cols-1 row-cols-md-3 justify-content-center w-75 mx-auto mb-3">
+        <div class="col mt-5">
             <div class="mx-auto text-center">
                 <a href="/enterprise" class="d-flex flex-column">
                     <i class="far fa-building fa-7x"></i>
@@ -54,7 +54,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-6 mt-5">
+        <div class="col mt-5">
             <div class="mx-auto text-center">
                 <a href="/sport-teams" class="d-flex flex-column">
                     <i class="fas fa-dumbbell fa-7x"></i>
@@ -62,7 +62,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-6 mt-5">
+        <div class="col mt-5">
             <div class="mx-auto text-center">
                 <a href="/events" class="d-flex flex-column">
                     <i class="far fa-newspaper fa-7x"></i>
@@ -70,11 +70,19 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-6 mt-5">
+        <div class="col mt-5">
             <div class="mx-auto text-center">
                 <a href="/covid" class="d-flex flex-column">
                     <i class="fas fa-lungs-virus fa-7x"></i>
                     <p>疫情动态</p>
+                </a>
+            </div>
+        </div>
+        <div class="col mt-5">
+            <div class="mx-auto text-center">
+                <a href="/stock" class="d-flex flex-column">
+                    <i class="fas fa-chart-line fa-7x"></i>
+                    <p>美股动态</p>
                 </a>
             </div>
         </div>
