--- a/templates/views/stock.hbs
+++ b/templates/views/stock.hbs
@@ -13,13 +13,13 @@
 <div class="container-fluid" id="stock">
 
     <div class="row justify-content-around">
-        <div class="col-xs-12 col-sm-4 text-center">
+        <div class="col-12 col-sm-4 text-center">
             <a class="btn btn-outline-primary btn-sm w-75 my-1" href="/stock?mode=actives" role="button">Most Actives</a>
         </div>
-        <div class="col-xs-12 col-sm-4 text-center">
+        <div class="col-12 col-sm-4 text-center">
             <a class="btn btn-outline-success btn-sm w-75 my-1" href="/stock?mode=gainers" role="button">Most Gainers</a>
         </div>
-        <div class="col-xs-12 col-sm-4 text-center">
+        <div class="col-12 col-sm-4 text-center">
             <a class="btn btn-outline-danger btn-sm w-75 my-1" href="/stock?mode=losers" role="button">Most Losers</a>
         </div>
     </div>
