--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -38,6 +38,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 
+    {{!-- moment js --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+
     <meta name="keywords" content="深圳大学, 深大, 深圳大学安省, 深大安省, 深圳大学安省校友会, 深大安省校友会, 深圳大学多伦多, 深大多伦多, 深圳大学多伦多校友会, 深大多伦多校友会"/>
 	<meta name="description" content="深圳大学安省校友会成立了"/>
 	
