--- a/templates/views/council.hbs
+++ b/templates/views/council.hbs
@@ -13,7 +13,7 @@
 
 <div class="container-fluid" id="council">
     <div class="row justify-content-center">
-        <div class="col col-md-9 py-3 table-responsive">
+        <div class="col col-sm-12 col-md-9 py-3 table-responsive">
             <h1 class="text-center">深大安省校友会理事会</h1>
             <table class="table table-hover table-bordered text-center">
                 <caption>Update: {{update}}</caption>
