--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -86,6 +86,14 @@
                 </a>
             </div>
         </div>
+        <div class="col mt-5">
+            <div class="mx-auto text-center">
+                <a href="/holidays" class="d-flex flex-column">
+                    <i class="fab fa-canadian-maple-leaf fa-7x"></i>
+                    <p>加国假期</p>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
