--- a/templates/views/stock.hbs
+++ b/templates/views/stock.hbs
@@ -26,7 +26,7 @@
 
     <div class="row justify-content-center">
         <div class="col col-md-9 py-3 table-responsive">
-            <h1 class="text-center">Top 30 Most {{mode}}</h1>
+            <h1 class="text-center text-capitalize">Top 30 Most {{mode}}</h1>
             <table class="table table-hover table-bordered text-center">
                 <caption></caption>
                 <thead>
