change holiday title

--- a/templates/views/holidays.hbs
+++ b/templates/views/holidays.hbs
@@ -5,7 +5,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">首页</a></li>
-            <li class="breadcrumb-item active" aria-current="page">加国节假日</li>
+            <li class="breadcrumb-item active" aria-current="page">加拿大节假日</li>
         </ol>
     </nav>
 </div>
@@ -78,7 +78,7 @@
 </div>
 
 <script>
-    $('title').html('深圳大学安省校友会-加国节假日查询');
+    $('title').html('深圳大学安省校友会-加拿大节假日');
 
     /*$("#year").datepicker({
         format: " yyyy", // Notice the Extra space at the beginning
