add url in events

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -224,3 +224,8 @@ a:hover {
     opacity: 0.4;
     border: 1px dashed #333;
 }
+
+.form-group.required label::after {
+    content:"*";
+    color:red;
+}
