--- a/templates/views/create-event.hbs
+++ b/templates/views/create-event.hbs
@@ -16,7 +16,7 @@
 <div class="container-sm" id="create-event">
     <div class="w-100 mx-auto py-3">
         <form id="create-event-form">
-            <div class="form-group">
+            <div class="form-group required">
                 <label for="inputTitle">活动标题</label>
                 <input type="text" class="form-control" name="title" id="inputTitle" placeholder="活动标题" autocomplete="off" required>
             </div>
@@ -26,14 +26,19 @@
                     <label for="inputAuthor">作者</label>
                     <input type="text" class="form-control" name="author" id="inputAuthor" placeholder="作者">
                 </div>
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-4 required">
                     <label for="inputCreateDate">创建时间</label>
                     <input type="text" class="datepicker form-control" name="create_date" id="inputCreateDate" placeholder="(YYYY-MM-DD)" autocomplete="off" required>
                 </div>
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-4 required">
                     <label for="inputEventDate">活动举行时间</label>
                     <input type="text" class="datepicker form-control" name="event_date" id="inputEventDate" placeholder="(YYYY-MM-DD)" autocomplete="off" required>
                 </div>
+            </div>
+            
+            <div class="form-group">
+                <label for="inputUrl">文章链接</label>
+                <input type="text" class="form-control" name="url" id="inputUrl" placeholder="https://..." autocomplete="off">
             </div>
 
             <div class="form-group">
@@ -49,7 +54,7 @@
             <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6 pr-5 pr-md-0" id="gallery">
                 {{!-- <div class="col mb-2">
                     <a href="#" class="close-icon"><i class="fas fa-times-circle fa-sm close"></i></a>
-                    <img id="img-0" src="/img/events/1579368218072_badminton-team.png" class="w-100">
+                    <img id="img-0" src="/img/events/xxxxx.png" class="w-100">
                 </div> --}}
             </div>
 
@@ -84,7 +89,13 @@
     });
 
     const checkDateFormat = (date) => {
-        return date.match(/^\d{4}\-\d{2}\-\d{2}$/);
+        const regex = /^\d{4}\-\d{2}\-\d{2}$/;
+        return regex.test(date);
+    }
+
+    const checkUrlFormat = (url) => {
+        const regex = /^https?:\/\//;
+        return regex.test(url);
     }
 
     const showImg = (url, index, img_name) => {
@@ -156,6 +167,7 @@
         const title = $('#inputTitle').val().trim();
         const create_date = $('#inputCreateDate').val();
         const event_date = $('#inputEventDate').val();
+        const article_url = $('#inputUrl').val();
 
         if (!title) {
             alert('请输入活动标题');
@@ -175,6 +187,13 @@
             return;
         }
 
+        
+        if (article_url && !checkUrlFormat(article_url)) {
+            alert('请修改链接格式为 http:// 或 https://')
+            $('#inputUrl').focus()
+            return;
+        }
+
         if (imgs_list.length > 20) {
             return alert('最多只可选择20张图片')
         }
@@ -186,6 +205,7 @@
         form_data.append('author', $('#inputAuthor').val().trim() || '佚名')
         form_data.append('create_date', create_date)
         form_data.append('event_date', event_date)
+        form_data.append('article_url', article_url)
         form_data.append('content', $('#inputEventContent').val() || '')
 
         if (imgs_list.length > 0) {
