remove one name

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -117,7 +117,7 @@
         </div>
 
         <div class="copyright text-center my-3">
-            <span>Copyright &copy; 2019 深大安省校友会. All Rights Reserved</span><br>
+            <span>Copyright &copy; 2019-2021 深大安省校友会. All Rights Reserved</span><br>
             <span>Designed by Zhuoran Yu</span>
         </div>
 
